Values of categorical features occurring only once are replaced with 'Other' prior to one-hot encoding

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,12 @@ data/*
 documents/*
 results/*
 !**/.gitkeep
+!data/processed/.gitkeep
+!data/raw/.gitkeep
+!data/vectorized/.gitkeep
+!documents/logs/.gitkeep
+!results/models/.gitkeep
+!outputs/models/.gitkeep
 config-private.yml
 
 ## PYTHON ##
