Config file updated to contain no names of features generated in preprocessing. Refactored.

--- a/config.yml
+++ b/config.yml
@@ -8,18 +8,11 @@ PATHS:
 DATA:
   GROUND_TRUTH_DATE: 'today'
   CHRONIC_THRESHOLD: 180
-  FEATURES_TO_DROP_FIRST: ['OrganizationID', 'DOB']
-  FEATURES_TO_DROP_LAST: ['ServiceID', 'FamilyID', 'ServiceEndDate', 'MovedInDate', 'IncomeStartDate', 'IncomeEndDate', 'ExpenseStartDate', 'ExpenseEndDate',
-    'EducationStartDate', 'EducationEndDate', 'HealthIssueStart', 'HealthIssueEnd', 'ContributingFactorDateStart', 'ContributingFactorDateEnd',
-    'BehavioralRiskFactorDateStart', 'BehavioralRiskFactorDateEnd', 'LifeEventStartDate', 'LifeEventEndDate', 'StayStartDate', 'StayEndDate', 'HousingStartDate',
-    'HousingEndDate', 'ReservationsStartDate', 'ReservationsEndDate', 'TurnawaysStartDate', 'TurnawaysEndDate','SPDAT_Date']
-  TIME_LENGTH_FEATURES: ['Stay', 'Housing', 'Reservations', 'Turnaways']
+  FEATURES_TO_DROP_FIRST: ['OrganizationID','DOB','MovedInDate']
+  FEATURES_TO_DROP_LAST: ['ServiceID','FamilyID','ServiceEndDate','SPDAT_Date']
+  TIME_LENGTH_FEATURES: ['Stay']
   NONCATEGORICAL_FEATURES: ['ServiceID','ClientID','FamilyID','ServiceStartDate', 'ServiceEndDate','CurrentAge','ClientHeightCM',
-    'ClientWeightKG','MovedInDate','MonthlyAmount', 'ExpenseAmount','IncomeStartDate','IncomeEndDate','ExpenseStartDate','ExpenseEndDate',
-    'EducationStartDate','EducationEndDate','HealthIssueStart','HealthIssueEnd', 'ContributingFactorDateStart','ContributingFactorDateEnd',
-    'BehavioralRiskFactorDateStart', 'BehavioralRiskFactorDateEnd','LifeEventStartDate','LifeEventEndDate','StayStartDate','StayEndDate',
-    'HousingStartDate','HousingEndDate', 'ReservationsStartDate','ReservationsEndDate','TurnawaysStartDate', 'TurnawaysEndDate','HasFamily','SPDAT_Date','TotalScore',
-    'FoodBankTrips']
+    'ClientWeightKG','MonthlyAmount', 'ExpenseAmount','SPDAT_Date','TotalScore']
   CATEGORICAL_FEATURES: ['ConsentType', 'RelationshipType', 'Gender', 'AboriginalIndicator', 'Citizenship', 'VeteranStatus', 'CountryOfBirth',
     'ProvinceOfBirth', 'CityOfBirth', 'GeoRegion', 'HairColour', 'EyeColour', 'ServiceType', 'OrganizationName', 'ReasonForService',
     'CurrentlyHoused', 'IncomeType', 'ExpenseType', 'Expensefrequency', 'IsEssentialYN', 'EducationLevel', 'HealthIssue', 'DiagnosedYN',
@@ -30,31 +23,3 @@ DATA:
       NAME: 'Service'
       START: 'ServiceStartDate'
       END: 'ServiceEndDate'
-    -
-      NAME: 'Income'
-      START: 'IncomeStartDate'
-      END: 'IncomeEndDate'
-    -
-      NAME: 'Expense'
-      START: 'ExpenseStartDate'
-      END: 'ExpenseEndDate'
-    -
-      NAME: 'Education'
-      START: 'EducationStartDate'
-      END: 'EducationEndDate'
-    -
-      NAME: 'HealthIssue'
-      START: 'HealthIssueStart'
-      END: 'HealthIssueEnd'
-    -
-      NAME: 'ContributingFactor'
-      START: 'ContributingFactorDateStart'
-      END: 'ContributingFactorDateEnd'
-    -
-      NAME: 'BehavioralRiskFactor'
-      START: 'BehavioralRiskFactorDateStart'
-      END: 'BehavioralRiskFactorDateEnd'
-    -
-      NAME: 'LifeEvent'
-      START: 'LifeEventStartDate'
-      END: 'LifeEventEndDate'
