--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ results/*
 !**/.gitkeep
 !data/.gitkeep
 !data/processed/.gitkeep
+!data/interpretability/.gitkeep
 !data/raw/.gitkeep
 !documents/.gitkeep
 !results/.gitkeep
