Class imbalance strategies (minority oversampling, class weights)

--- a/config.yml
+++ b/config.yml
@@ -44,7 +44,10 @@ NN:
 
 # Training
 TRAIN:
+  TRAIN_SPLIT: 0.8
   VAL_SPLIT: 0.1
   TEST_SPLIT: 0.1
   EPOCHS: 100
   BATCH_SIZE: 128
+  CLASS_WEIGHT: true
+  MINORITY_OVERSAMPLE: false
