--- a/config.yml
+++ b/config.yml
@@ -11,7 +11,7 @@ PATHS:
   HORIZON_SEARCH: 'results/experiments/horizon_search.csv'
   TRAIN_SET: 'data/processed/Train_Set.csv'
   TEST_SET: 'data/processed/Test_Set.csv'
-  STD_SCALER: 'data/transformers/std_scaler.bin'
+  SCALER_COL_TRANSFORMER: 'data/transformers/scaler_col_transformer.bin'
   ORDINAL_COL_TRANSFORMER: 'data/transformers/ordinal_col_transformer.bin'
   OHE_COL_TRANSFORMER: 'data/transformers/ohe_col_transformer.bin'
 
