All int features considered categorical for LIME explanations. Improved workflow for using LIME

--- a/config.yml
+++ b/config.yml
@@ -42,6 +42,7 @@ DATA:
       NAME: 'Service'
       START: 'ServiceStartDate'
       END: 'ServiceEndDate'
+  LIME_NONCAT_FEATURES: []
 
 # Neural network models
 NN:
