Option to train multiple networks and save network with best results

--- a/config.yml
+++ b/config.yml
@@ -74,6 +74,8 @@ TRAIN:
   BATCH_SIZE: 128
   CLASS_WEIGHT: true
   MINORITY_OVERSAMPLE: false
+  METRIC_MONITOR: 'recall'
+  NUM_RUNS: 1
   RUNS_PER_N: 10
 
 # LIME
