--- a/config.yml
+++ b/config.yml
@@ -64,6 +64,7 @@ NN:
       DENSE1: 100
     L2_LAMBDA: 0.01
     DROPOUT: 0.3
+    LR: 0.001
 
 # Training
 TRAIN:
@@ -75,8 +76,13 @@ TRAIN:
   CLASS_WEIGHT: true
   MINORITY_OVERSAMPLE: false
   METRIC_MONITOR: 'recall'
-  NUM_RUNS: 1
+  NUM_RUNS: 10
   RUNS_PER_N: 10
+  HP:
+    DROPOUT: [0.1, 0.4]
+    LR: [0.0001, 0.002]
+    NODES: [100, 125]
+    METRICS: ['accuracy', 'recall']
 
 # LIME
 LIME:
