--- a/config.yml
+++ b/config.yml
@@ -75,7 +75,7 @@ TRAIN:
   IMB_STRATEGY: 'class_weight'
   METRIC_MONITOR: 'recall'
   NUM_RUNS: 10
-  THRESHOLDS: [0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95]
+  THRESHOLDS: 0.5   # Can be changed to list of values in range [0, 1]
   HP:
     METRICS: ['accuracy', 'loss', 'recall', 'precision']
     COMBINATIONS: 60
