--- a/config.yml
+++ b/config.yml
@@ -4,7 +4,7 @@ PATHS:
   PROCESSED_DATA: 'data/processed/HIFIS_Processed.csv'
   PROCESSED_OHE_DATA: 'data/processed/HIFIS_Processed_OHE.csv'
   GROUND_TRUTH: 'data/processed/GroundTruth.csv'
-  INTERPRETABILITY: './data/interpretability/feature_info.yml'
+  CAT_FEAT_INFO: './data/interpretability/feature_info.yml'
   MODEL_WEIGHTS: 'results/models/model.h5'
   IMAGES: 'documents/images/'
   LOGS: 'results\\logs\\'
