Implemented prediction script that preprocesses raw data, runs model prediction, generates explanations, and outputs results in a .csv

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ results/*
 !results/logs/.gitkeep
 !results/models/.gitkeep
 !results/experiments/.gitkeep
+!results/predictions/.gitkeep
 !*.gitkeep
 
 # Credentials to keep private
