--- a/config.yml
+++ b/config.yml
@@ -113,4 +113,4 @@ HORIZON_SEARCH:
 
 PREDICTION:
   THRESHOLD: 0.5
-  CLASS_NAMES: {0: 'chronically homeless', 1: 'not chronically homeless'}
+  CLASS_NAMES: {0: 'not at risk', 1: 'at risk'}
