--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
-data/*
-documents/*
-results/*
+data/processed/*
+data/raw/*
+data/transformers/*
+data/interpretability/*
+documents/images/*
+results/experiments/*
+results/logs/*
+results/models/*
+results/predictions/*
 !data/.gitkeep
 !data/processed/.gitkeep
 !data/interpretability/.gitkeep
@@ -13,7 +19,6 @@ results/*
 !results/models/.gitkeep
 !results/experiments/.gitkeep
 !results/predictions/.gitkeep
-!*.gitkeep
 
 # Credentials to keep private
 config-private.yml
