--- a/config.yml
+++ b/config.yml
@@ -76,7 +76,7 @@ TRAIN:
   EPOCHS: 300
   BATCH_SIZE: 128
   POS_WEIGHT: 0.6
-  IMB_STRATEGY: 'class_weight'
+  IMB_STRATEGY: 'class_weight'  # One of {'class_weight', 'random_oversample', 'smote', 'adasyn'}
   METRIC_MONITOR: 'recall'
   NUM_RUNS: 10
   THRESHOLDS: 0.5   # Can be changed to list of values in range [0, 1]
@@ -98,19 +98,21 @@ TRAIN:
       POS_WEIGHT: [0.6, 0.6]  # Weight multiplier for positive class
       IMB_STRATEGY: ['class_weight']
 
-# LIME
+# LIME explanations
 LIME:
   KERNEL_WIDTH: 1.75
   FEATURE_SELECTION: 'lasso_path'
   NUM_FEATURES: 15
   NUM_SAMPLES: 50000
 
+# Predictive horizon search experiment
 HORIZON_SEARCH:
   N_MIN: 0
   N_MAX: 52
   N_INTERVAL: 4
   RUNS_PER_N: 10
 
+# Predictions on raw data
 PREDICTION:
   THRESHOLD: 0.5
   CLASS_NAMES: {0: 'not at risk', 1: 'at risk'}
