--- a/config.yml
+++ b/config.yml
@@ -80,14 +80,14 @@ TRAIN:
   BATCH_SIZE: 128
   POS_WEIGHT: 0.6
   IMB_STRATEGY: 'class_weight'  # One of {'class_weight', 'random_oversample', 'smote', 'adasyn'}
-  EXPERIMENT_TYPE: 'single_train' # One of {'single_train', 'multi_train', 'hparam_search'}
+  EXPERIMENT_TYPE: 'hparam_search' # One of {'single_train', 'multi_train', 'hparam_search'}
   METRIC_MONITOR: 'recall'
   NUM_RUNS: 10
   THRESHOLDS: 0.5   # Can be changed to list of values in range [0, 1]
   HP:
     METRICS: ['accuracy', 'loss', 'recall', 'precision']
-    COMBINATIONS: 60
-    REPEATS: 2
+    COMBINATIONS: 3
+    REPEATS: 1
     RANGES:
       NODES0: [60, 80, 100, 120, 140]
       NODES1: [40, 60, 80, 100]
